Prevent sidebar from collapsing onto other page elements

--- a/app/assets/stylesheets/components/dashboard.scss
+++ b/app/assets/stylesheets/components/dashboard.scss
@@ -10,6 +10,7 @@
 .sidebar {
   box-shadow: 0 0 4px 1px rgba(0, 0, 0, 0.01), 0 3px 24px rgba(48,51,51,.09);
   height: 576px;
+  left: 876px;
   position: fixed;
   max-height: 570px;
   overflow-y: scroll;
